@@ -1,5 +1,12 @@
 2005-10-18  Roman Kennke  <kennke@aicas.com>
 
+	* gnu/testlet/javax/swing/RepaintManager/DisabledEventQueue.java:
+	Auxiliary helper class.
+	* gnu/testlet/javax/swing/RepaintManager/addDirtyRegion.java
+	New test.
+
+2005-10-18  Roman Kennke  <kennke@aicas.com>
+
 	* gnu/testlet/javax/swing/JViewport/TestViewport.java:
 	Auxiliary helper class.
 	* gnu/testlet/javax/swing/JViewport/setView.java:
